--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "cron": "^1.3.0",
+    "dotenv": "^5.0.1",
     "express": "^4.16.3",
+    "massive": "^4.8.3",
     "node-cron": "^1.2.1"
   }
 }
